[package]
name = "wasm-tls"
version = "0.1.0"
edition = "2021"
description = "A Rust WebAssembly TLS implementation"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rustls-pemfile = "2.0.0"
rustls-webpki = "0.103.1"
rustls-pki-types = "1.11.0"

[dependencies.rustls]
version = "0.23.26"
default-features = false
features = ["ring", "logging", "tls12", "std"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
rustls-pki-types = { version = "1.11.0", features = ["web"] }

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
